--- a/package.json
+++ b/package.json
@@ -9,6 +9,28 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "keywords": [
+    "react",
+    "vite",
+    "typescript",
+    "project-name",
+    "admin",
+    "admin-panel",
+    "responsive"
+  ],
+  "author": {
+    "name": "Ziba Nouri",
+    "email": "zn.zibanouri@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zibanouri/nova.git"
+  },
+  "homepage": "https://github.com/zibanouri/nova",
+  "bugs": {
+    "url": "https://github.com/zibanouri/nova/issues"
+  },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -26,5 +48,9 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
