--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -34,6 +34,7 @@
   },
   "include": [
     "src",
-    "ِDashboard/DashboardNavbar.tsx"
+    "components/DashboardNavbar.tsx",
+    "components/components"
   ]
 }
