--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "url": "https://github.com/zibanouri/nova/issues"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
